# kov_n1r_autonom

./: CMakeLists.txt  LICENSE.txt  README.md  package.xml
launch/: szenzor_launch.py
src/: adat_megjelenito.cpp  figyelo_node.cpp  szenzor_node.cpp
